<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/InputText"
            android:hint="@string/hint_add_task_input"
            android:id="@+id/taskContent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/save_button_text"
            android:layout_width="0dp"
            style="@style/MainCTA"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <CheckBox
            android:text="@string/highlight_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox" app:layout_constraintStart_toStartOf="@+id/taskContent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/taskContent" app:layout_constraintEnd_toEndOf="@+id/taskContent"/>
</androidx.constraintlayout.widget.ConstraintLayout>