<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/detailInfoContainer"
            android:focusable="true"
            android:focusableInTouchMode="true">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_add_task_input"
                android:id="@+id/taskContent"
                style="@style/InputText"/>
        <TextView
                tools:text="3 minutes ago"
                android:drawableStart="@drawable/ic_access_time_24dp"
                android:drawablePadding="8dp"
                style="@style/TaskCard.Content.Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dateTextView"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_marginTop="8dp">
            <Switch
                    android:text="@string/highlight_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/highlightBox"
                    style="@style/CustomSwitch"
                    android:layout_marginEnd="24dp"/>
            <Switch
                    android:text="@string/finished_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/isFinishedBox"
                    style="@style/CustomSwitch"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_marginTop="8dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtasks_title"/>
            <View
                    android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/darker_gray"
                    android:layout_marginStart="8dp"
                    android:alpha="0.5"/>
        </LinearLayout>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/subtasksList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailInfoContainer"
            android:layout_above="@id/saveButton"
            android:clipToPadding="false"
            android:paddingBottom="100dp"/>
    <com.github.clans.fab.FloatingActionButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:fab_colorNormal="?colorPrimary"
            app:fab_size="normal"
            android:src="@drawable/fab_add"
            android:layout_alignParentEnd="true"
            android:layout_above="@id/saveButton"
            android:clickable="true"/>

    <Button
            android:text="@string/save_button_text"
            android:layout_width="match_parent"
            style="@style/MainCTA"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton"
            android:layout_alignParentBottom="true"/>

    <ProgressBar
            android:id="@+id/taskLoader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
</RelativeLayout>
